--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -114,7 +114,7 @@ MRUItem6=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Final
 ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Tentacles
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Fruits
 None=======
 None=======
 ContentBrowserTab1.SourcesExpanded=True
@@ -141,7 +141,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Final/Levels/TestingArea
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 PaperTileMapActor.TransformCommon=True
@@ -1559,6 +1559,63 @@ W_MainMenu_C.Clipping=True
 W_MainMenu_C.Navigation=True
 W_PauseMenu_C.Designer=True
 W_PauseMenu_C.Layout=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Tags=True
+CapsuleComponent.Cooking=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+BP_Exploding_Enemies_C.Default=True
+BP_Exploding_Enemies_C.Tick=True
+BP_Exploding_Enemies_C.Character=True
+BP_Exploding_Enemies_C.Camera=True
+BP_Exploding_Enemies_C.Pawn=True
+BP_Exploding_Enemies_C.Rendering=True
+BP_Exploding_Enemies_C.Replication=True
+BP_Exploding_Enemies_C.Input=True
+BP_Exploding_Enemies_C.Actor=True
+BP_Exploding_Enemies_C.TransformCommon=True
+BP_Exploding_Enemies_C.Sprite=True
+BP_Exploding_Enemies_C.Physics=True
+BP_Exploding_Enemies_C.Collision=True
+BP_Exploding_Enemies_C.Lighting=True
+BP_Exploding_Enemies_C.Tags=True
+BP_Exploding_Enemies_C.Activation=True
+BP_Exploding_Enemies_C.Cooking=True
+BP_Exploding_Enemies_C.Character Movement: Jumping / Falling=True
+BP_Exploding_Enemies_C.Character Movement (General Settings)=True
+BP_Exploding_Enemies_C.Character Movement: Walking=True
+BP_Exploding_Enemies_C.Character Movement: Swimming=True
+BP_Exploding_Enemies_C.Character Movement: Flying=True
+BP_Exploding_Enemies_C.Character Movement: Custom Movement=True
+BP_Exploding_Enemies_C.Character Movement (Rotation Settings)=True
+BP_Exploding_Enemies_C.Character Movement: Physics Interaction=True
+BP_Exploding_Enemies_C.Character Movement (Networking)=True
+BP_Exploding_Enemies_C.Character Movement=True
+BP_Exploding_Enemies_C.Character Movement: Avoidance=True
+BP_Exploding_Enemies_C.Character Movement: NavMesh Movement=True
+BP_Exploding_Enemies_C.RootMotion=True
+BP_Exploding_Enemies_C.NavMovement=True
+BP_Exploding_Enemies_C.Velocity=True
+BP_Exploding_Enemies_C.PlanarMovement=True
+BP_Exploding_Enemies_C.MovementComponent=True
+BP_Exploding_Enemies_C.Shape=True
+BP_Exploding_Enemies_C.Navigation=True
+BP_Exploding_Enemies_C.Materials=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -2229,6 +2286,7 @@ MeshBuilder.TimeStamp=2018.10.01-03.52.50
 MeshBuilder.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/Final/Blueprint/BP_Exploding_Enemies.BP_Exploding_Enemies;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Homing_Enemy.BP_Homing_Enemy;
 RecentlyPlaced=/Game/Final/Blueprint/Assets/BP_RNG_Box.BP_RNG_Box;
 RecentlyPlaced=/Game/Final/Flipbook/Assets/FB_RNG_Box.FB_RNG_Box;
@@ -2248,29 +2306,28 @@ RecentlyPlaced=/Game/Final/Sprites/Platforms/health_container.health_container;
 RecentlyPlaced=/Game/Final/Sprites/Platforms/up_down_platform.up_down_platform;
 RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle_ground2_Sprite_0.tentacle_ground2_Sprite_0;
 RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle2_Sprite_0.tentacle2_Sprite_0;
-RecentlyPlaced=/Game/Final/Sprites/Trees/IMG-0465_Sprite_1.IMG-0465_Sprite_1;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Levels/TestingArea
-MRUItem1=/Game/Final/Levels/MainMenu
-MRUItem2=/Game/Final/Blueprint/BP_Maincharacter
-MRUItem3=/Game/Final/Widget/W_PauseMenu
-MRUItem4=/Game/Final/Widget/W_MainMenu
-MRUItem5=/Game/Final/Levels/GameLevel
-MRUItem6=/Game/Final/Blueprint/BP_Homing_Enemy
-MRUItem7=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem8=/Game/Final/Blueprint/Assets/BP_Healing_Box
-MRUItem9=/Game/Final/Blueprint/Assets/BP_Damage_Box
-MRUItem10=/Game/Final/Widget/W_Player_Health
-MRUItem11=/Game/Final/Blueprint/Assets/BP_RNG_Box
-MRUItem12=/Game/Final/Sprites/Platforms/mystery_container
-MRUItem13=/Game/Particles/P_Explosion
-MRUItem14=/Game/StarterContent/Particles/P_Explosion
-MRUItem15=/Game/Final/Particles/P_Explosion
-MRUItem16=/Game/Final/Blueprint/Assets/BP_Health_Box
-MRUItem17=/Game/Final/Blueprint/Assets/BP_Tentacle_6
-MRUItem18=/Game/Final/Blueprint/Assets/BP_Tentacle_5
-MRUItem19=/Game/Final/Blueprint/Assets/BP_Tentacle_4
+MRUItem0=/Game/Final/Blueprint/BP_Homing_Enemy
+MRUItem1=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem2=/Game/Final/Blueprint/BP_Exploding_Enemies
+MRUItem3=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem4=/Game/Final/Levels/TestingArea
+MRUItem5=/Game/Final/Levels/MainMenu
+MRUItem6=/Game/Final/Widget/W_PauseMenu
+MRUItem7=/Game/Final/Widget/W_MainMenu
+MRUItem8=/Game/Final/Levels/GameLevel
+MRUItem9=/Game/Final/Blueprint/Assets/BP_Healing_Box
+MRUItem10=/Game/Final/Blueprint/Assets/BP_Damage_Box
+MRUItem11=/Game/Final/Widget/W_Player_Health
+MRUItem12=/Game/Final/Blueprint/Assets/BP_RNG_Box
+MRUItem13=/Game/Final/Sprites/Platforms/mystery_container
+MRUItem14=/Game/Particles/P_Explosion
+MRUItem15=/Game/StarterContent/Particles/P_Explosion
+MRUItem16=/Game/Final/Particles/P_Explosion
+MRUItem17=/Game/Final/Blueprint/Assets/BP_Health_Box
+MRUItem18=/Game/Final/Blueprint/Assets/BP_Tentacle_6
+MRUItem19=/Game/Final/Blueprint/Assets/BP_Tentacle_5
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
@@ -2317,6 +2374,7 @@ MRUItem19=/Game/Final/Blueprint/Assets/BP_Tentacle_4
 /Game/Final/Widget/W_PauseMenu.W_PauseMenu=1
 /Game/Final/Widget/W_MainMenu.W_MainMenu=1
 /Game/Final/Levels/MainMenu.MainMenu:PersistentLevel.MainMenu=1
+/Game/Final/Blueprint/BP_Exploding_Enemies.BP_Exploding_Enemies=1
 
 [DetailPropertyExpansion]
 PaperSprite="\"Object.Collision.CollisionGeometry\" "
@@ -2326,7 +2384,7 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ShapeComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
@@ -2344,11 +2402,11 @@ SequencerWidgets.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2018.09.28-03.44.54
 ExternalImagePicker.LastCompileMethod=Unknown
 PaperFlipbookComponent=PaperFlipbookComponent.Collision.Collision,
-BP_Maincharacter_C=BP_Maincharacter_C.Collision.Collision,
+BP_Maincharacter_C=BP_Maincharacter_C.Collision.Collision,BP_Homing_Enemy_C.Physics.ConstraintsGroup,
 K2Node_VariableGet=BP_Maincharacter_C.Collision.Collision,BP_Homing_Enemy_C.Physics.ConstraintsGroup,
 FloatProperty=BP_Maincharacter_C.Collision.Collision,
-IntProperty=BP_Maincharacter_C.Collision.Collision,
-K2Node_VariableSet=BP_Maincharacter_C.Collision.Collision,
+IntProperty=BP_Maincharacter_C.Collision.Collision,BP_Homing_Enemy_C.Physics.ConstraintsGroup,
+K2Node_VariableSet=BP_Maincharacter_C.Collision.Collision,BP_Homing_Enemy_C.Physics.ConstraintsGroup,
 BP_Homing_Enemy_C=BP_Maincharacter_C.Collision.Collision,BP_Homing_Enemy_C.Physics.ConstraintsGroup,
 AITask=BP_Maincharacter_C.Collision.Collision,BP_Homing_Enemy_C.Physics.ConstraintsGroup,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Menu,
@@ -2412,6 +2470,10 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Menu,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Menu,
 PlayerController=BP_Maincharacter_C.Collision.Collision,
+BP_Flying_Enemy_C=BP_Maincharacter_C.Collision.Collision,BP_Homing_Enemy_C.Physics.ConstraintsGroup,
+BoolProperty=BP_Maincharacter_C.Collision.Collision,BP_Homing_Enemy_C.Physics.ConstraintsGroup,
+StructProperty=BP_Maincharacter_C.Collision.Collision,BP_Homing_Enemy_C.Physics.ConstraintsGroup,
+BP_Exploding_Enemies_C=BP_Maincharacter_C.Collision.Collision,BP_Homing_Enemy_C.Physics.ConstraintsGroup,
 
 [WidgetTemplatesExpanded]
 Extra=False
