--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,7 +79,7 @@ LastExecutedLaunchName=ALIENMOMO
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowPosition=(X=315,Y=143)
+NewWindowPosition=(X=315,Y=163)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -141,7 +141,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Final/Levels/TestingArea
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 PaperTileMapActor.TransformCommon=True
@@ -1616,6 +1616,33 @@ BP_Exploding_Enemies_C.MovementComponent=True
 BP_Exploding_Enemies_C.Shape=True
 BP_Exploding_Enemies_C.Navigation=True
 BP_Exploding_Enemies_C.Materials=True
+BP_Maincharacter_C.Character Movement: Jumping / Falling=True
+BP_Maincharacter_C.Character Movement (General Settings)=True
+BP_Maincharacter_C.Character Movement: Walking=True
+BP_Maincharacter_C.Character Movement: Swimming=True
+BP_Maincharacter_C.Character Movement: Flying=True
+BP_Maincharacter_C.Character Movement: Custom Movement=True
+BP_Maincharacter_C.Character Movement (Rotation Settings)=True
+BP_Maincharacter_C.Character Movement (Networking)=True
+BP_Maincharacter_C.Character Movement: Physics Interaction=True
+BP_Maincharacter_C.Character Movement=True
+BP_Maincharacter_C.Character Movement: Avoidance=True
+BP_Maincharacter_C.Character Movement: NavMesh Movement=True
+BP_Maincharacter_C.RootMotion=True
+BP_Maincharacter_C.NavMovement=True
+BP_Maincharacter_C.Velocity=True
+BP_Maincharacter_C.PlanarMovement=True
+BP_Maincharacter_C.MovementComponent=True
+BP_Maincharacter_C.Activation=True
+REINST_BP_Maincharacter_C_92.None=True
+REINST_BP_Maincharacter_C_92.Tick=True
+REINST_BP_Maincharacter_C_92.Character=True
+REINST_BP_Maincharacter_C_92.Camera=True
+REINST_BP_Maincharacter_C_92.Pawn=True
+REINST_BP_Maincharacter_C_92.Rendering=True
+REINST_BP_Maincharacter_C_92.Replication=True
+REINST_BP_Maincharacter_C_92.Input=True
+REINST_BP_Maincharacter_C_92.Actor=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -2308,16 +2335,16 @@ RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle_ground2_Sprite_0.tentacle_
 RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle2_Sprite_0.tentacle2_Sprite_0;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
-MRUItem1=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0
-MRUItem2=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0
-MRUItem3=/Game/Final/Sprites/Tentacles/tentacle_ground1
-MRUItem4=/Game/Final/Sprites/Trees/islandtree2_Sprite_0
-MRUItem5=/Game/Final/Sprites/Trees/islandtrees3_Sprite_0
-MRUItem6=/Game/Final/Levels/GameLevel
-MRUItem7=/Game/Final/Levels/MainGame
-MRUItem8=/Game/Final/Blueprint/BP_Homing_Enemy
-MRUItem9=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem0=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem1=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
+MRUItem2=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0
+MRUItem3=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0
+MRUItem4=/Game/Final/Sprites/Tentacles/tentacle_ground1
+MRUItem5=/Game/Final/Sprites/Trees/islandtree2_Sprite_0
+MRUItem6=/Game/Final/Sprites/Trees/islandtrees3_Sprite_0
+MRUItem7=/Game/Final/Levels/GameLevel
+MRUItem8=/Game/Final/Levels/MainGame
+MRUItem9=/Game/Final/Blueprint/BP_Homing_Enemy
 MRUItem10=/Game/Final/Blueprint/BP_Exploding_Enemies
 MRUItem11=/Game/Final/Blueprint/BP_Flying_Enemy
 MRUItem12=/Game/Final/Levels/TestingArea
@@ -2384,7 +2411,7 @@ MRUItem19=/Game/Final/Blueprint/Assets/BP_RNG_Box
 
 [DetailPropertyExpansion]
 PaperSprite="\"Object.Collision.CollisionGeometry\" "
-Object="\"Object.Collision.CollisionGeometry\" "
+Object=
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2395,6 +2422,11 @@ PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[8]\" "
+BP_Maincharacter_C=
+PaperCharacter=
+Character=
+Pawn=
+REINST_BP_Maincharacter_C_92="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.Lens.Lens,
