--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1643,6 +1643,69 @@ REINST_BP_Maincharacter_C_92.Rendering=True
 REINST_BP_Maincharacter_C_92.Replication=True
 REINST_BP_Maincharacter_C_92.Input=True
 REINST_BP_Maincharacter_C_92.Actor=True
+BP_Tentacle_1_C.TransformCommon=True
+BP_Tentacle_2_C.TransformCommon=True
+PaperFlipbook.Sprite=True
+BP_LargeTentacle_C.Tick=True
+BP_LargeTentacle_C.Rendering=True
+BP_LargeTentacle_C.Replication=True
+BP_LargeTentacle_C.Input=True
+BP_LargeTentacle_C.Actor=True
+BP_SmallTentacle_C.Tick=True
+BP_SmallTentacle_C.Rendering=True
+BP_SmallTentacle_C.Replication=True
+BP_SmallTentacle_C.Input=True
+BP_SmallTentacle_C.Actor=True
+REINST_BP_Following_Boss_C_214.Variable=True
+REINST_BP_Following_Boss_C_214.TransformCommon=True
+REINST_BP_Following_Boss_C_214.Sockets=True
+REINST_BP_Following_Boss_C_214.Shape=True
+REINST_BP_Following_Boss_C_214.Navigation=True
+REINST_BP_Following_Boss_C_214.Rendering=True
+REINST_BP_Following_Boss_C_214.Physics=True
+REINST_BP_Following_Boss_C_214.Collision=True
+REINST_BP_Following_Boss_C_214.Tags=True
+REINST_BP_Following_Boss_C_214.ComponentReplication=True
+REINST_BP_Following_Boss_C_214.Cooking=True
+REINST_BP_Following_Boss_C_214.Events=True
+REINST_BP_Following_Boss_C_302.Variable=True
+REINST_BP_Following_Boss_C_302.TransformCommon=True
+REINST_BP_Following_Boss_C_302.Sockets=True
+REINST_BP_Following_Boss_C_302.Sprite=True
+REINST_BP_Following_Boss_C_302.Materials=True
+REINST_BP_Following_Boss_C_302.Physics=True
+REINST_BP_Following_Boss_C_302.Collision=True
+REINST_BP_Following_Boss_C_302.Lighting=True
+REINST_BP_Following_Boss_C_302.Rendering=True
+REINST_BP_Following_Boss_C_302.Tags=True
+REINST_BP_Following_Boss_C_302.ComponentReplication=True
+REINST_BP_Following_Boss_C_302.Activation=True
+REINST_BP_Following_Boss_C_302.Cooking=True
+REINST_BP_Following_Boss_C_302.Events=True
+REINST_BP_Following_Boss_C_320.Variable=True
+REINST_BP_Following_Boss_C_320.TransformCommon=True
+REINST_BP_Following_Boss_C_320.Sockets=True
+REINST_BP_Following_Boss_C_320.Shape=True
+REINST_BP_Following_Boss_C_320.Navigation=True
+REINST_BP_Following_Boss_C_320.Rendering=True
+REINST_BP_Following_Boss_C_320.Physics=True
+REINST_BP_Following_Boss_C_320.Collision=True
+REINST_BP_Following_Boss_C_320.Tags=True
+REINST_BP_Following_Boss_C_320.ComponentReplication=True
+REINST_BP_Following_Boss_C_320.Cooking=True
+REINST_BP_Following_Boss_C_320.Events=True
+REINST_BP_Following_Boss_C_326.Variable=True
+REINST_BP_Following_Boss_C_326.TransformCommon=True
+REINST_BP_Following_Boss_C_326.Sockets=True
+REINST_BP_Following_Boss_C_326.Shape=True
+REINST_BP_Following_Boss_C_326.Navigation=True
+REINST_BP_Following_Boss_C_326.Rendering=True
+REINST_BP_Following_Boss_C_326.Physics=True
+REINST_BP_Following_Boss_C_326.Collision=True
+REINST_BP_Following_Boss_C_326.Tags=True
+REINST_BP_Following_Boss_C_326.ComponentReplication=True
+REINST_BP_Following_Boss_C_326.Cooking=True
+REINST_BP_Following_Boss_C_326.Events=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -2313,6 +2376,9 @@ MeshBuilder.TimeStamp=2018.10.01-03.52.50
 MeshBuilder.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/Final/Blueprint/Boss/BP_Following_Boss.BP_Following_Boss;
+RecentlyPlaced=/Game/Final/Blueprint/Tentacles/BP_Tentacle_2.BP_Tentacle_2;
+RecentlyPlaced=/Game/Final/Blueprint/Tentacles/BP_Tentacle_1.BP_Tentacle_1;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Exploding_Enemies.BP_Exploding_Enemies;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Homing_Enemy.BP_Homing_Enemy;
 RecentlyPlaced=/Game/Final/Blueprint/Assets/BP_RNG_Box.BP_RNG_Box;
@@ -2330,31 +2396,28 @@ RecentlyPlaced=/Game/Final/Sprites/Trees/islandtrees3_Sprite_1.islandtrees3_Spri
 RecentlyPlaced=/Game/Final/Sprites/Trees/isnlandstrees_Sprite_0.isnlandstrees_Sprite_0;
 RecentlyPlaced=/Game/Final/Sprites/Trees/islandtree2_Sprite_0.islandtree2_Sprite_0;
 RecentlyPlaced=/Game/Final/Sprites/Platforms/health_container.health_container;
-RecentlyPlaced=/Game/Final/Sprites/Platforms/up_down_platform.up_down_platform;
-RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle_ground2_Sprite_0.tentacle_ground2_Sprite_0;
-RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle2_Sprite_0.tentacle2_Sprite_0;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Blueprint/BP_Maincharacter
-MRUItem1=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
-MRUItem2=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0
-MRUItem3=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0
-MRUItem4=/Game/Final/Sprites/Tentacles/tentacle_ground1
-MRUItem5=/Game/Final/Sprites/Trees/islandtree2_Sprite_0
-MRUItem6=/Game/Final/Sprites/Trees/islandtrees3_Sprite_0
-MRUItem7=/Game/Final/Levels/GameLevel
-MRUItem8=/Game/Final/Levels/MainGame
-MRUItem9=/Game/Final/Blueprint/BP_Homing_Enemy
-MRUItem10=/Game/Final/Blueprint/BP_Exploding_Enemies
-MRUItem11=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem12=/Game/Final/Levels/TestingArea
-MRUItem13=/Game/Final/Levels/MainMenu
-MRUItem14=/Game/Final/Widget/W_PauseMenu
-MRUItem15=/Game/Final/Widget/W_MainMenu
-MRUItem16=/Game/Final/Blueprint/Assets/BP_Healing_Box
-MRUItem17=/Game/Final/Blueprint/Assets/BP_Damage_Box
-MRUItem18=/Game/Final/Widget/W_Player_Health
-MRUItem19=/Game/Final/Blueprint/Assets/BP_RNG_Box
+MRUItem0=/Game/Final/Blueprint/Tentacles/BP_LargeTentacle
+MRUItem1=/Game/Final/Blueprint/Boss/BP_Following_Boss
+MRUItem2=/Game/Final/Blueprint/Tentacles/BP_SmallTentacle
+MRUItem3=/Game/Final/Flipbook/Assets/FB_SmallTentacle
+MRUItem4=/Game/Final/Blueprint/Tentacles/BP_Tentacle_6
+MRUItem5=/Game/Final/Blueprint/Tentacles/BP_Tentacle_5
+MRUItem6=/Game/Final/Blueprint/Tentacles/BP_Tentacle_4
+MRUItem7=/Game/Final/Blueprint/Tentacles/BP_Tentacle_3
+MRUItem8=/Game/Final/Blueprint/Tentacles/BP_Tentacle_2
+MRUItem9=/Game/Final/Blueprint/Tentacles/BP_Tentacle_1
+MRUItem10=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem11=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
+MRUItem12=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0
+MRUItem13=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0
+MRUItem14=/Game/Final/Sprites/Tentacles/tentacle_ground1
+MRUItem15=/Game/Final/Sprites/Trees/islandtree2_Sprite_0
+MRUItem16=/Game/Final/Sprites/Trees/islandtrees3_Sprite_0
+MRUItem17=/Game/Final/Levels/GameLevel
+MRUItem18=/Game/Final/Levels/MainGame
+MRUItem19=/Game/Final/Blueprint/BP_Homing_Enemy
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
@@ -2408,25 +2471,39 @@ MRUItem19=/Game/Final/Blueprint/Assets/BP_RNG_Box
 /Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0.tentacle_ground1_Sprite_0=1
 /Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0.tentaclearchlarge_Sprite_0=1
 /Game/Final/Sprites/Tentacles/tentacle1_Sprite_0.tentacle1_Sprite_0=1
+/Game/Final/Blueprint/Tentacles/BP_Tentacle_1.BP_Tentacle_1=1
+/Game/Final/Blueprint/Tentacles/BP_Tentacle_2.BP_Tentacle_2=1
+/Game/Final/Blueprint/Tentacles/BP_Tentacle_3.BP_Tentacle_3=1
+/Game/Final/Blueprint/Tentacles/BP_Tentacle_4.BP_Tentacle_4=1
+/Game/Final/Blueprint/Tentacles/BP_Tentacle_5.BP_Tentacle_5=1
+/Game/Final/Blueprint/Tentacles/BP_Tentacle_6.BP_Tentacle_6=1
+/Game/Final/Flipbook/Assets/FB_SmallTentacle.FB_SmallTentacle=1
+/Game/Final/Blueprint/Boss/BP_Following_Boss.BP_Following_Boss=1
+/Game/Final/Blueprint/Tentacles/BP_LargeTentacle.BP_LargeTentacle=1
 
 [DetailPropertyExpansion]
 PaperSprite="\"Object.Collision.CollisionGeometry\" "
-Object=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ShapeComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[8]\" "
 BP_Maincharacter_C=
-PaperCharacter=
-Character=
-Pawn=
+PaperCharacter="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Character="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Pawn="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 REINST_BP_Maincharacter_C_92="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+BP_Following_Boss_C="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+REINST_BP_Following_Boss_C_302="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+REINST_BP_Following_Boss_C_320="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+REINST_BP_Following_Boss_C_326="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.Lens.Lens,
@@ -2512,6 +2589,7 @@ BP_Flying_Enemy_C=BP_Maincharacter_C.Collision.Collision,BP_Homing_Enemy_C.Physi
 BoolProperty=BP_Maincharacter_C.Collision.Collision,BP_Homing_Enemy_C.Physics.ConstraintsGroup,
 StructProperty=BP_Maincharacter_C.Collision.Collision,BP_Homing_Enemy_C.Physics.ConstraintsGroup,
 BP_Exploding_Enemies_C=BP_Maincharacter_C.Collision.Collision,BP_Homing_Enemy_C.Physics.ConstraintsGroup,
+BoxComponent=BoxComponent.Collision.Collision,
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -2585,5 +2663,6 @@ LightDir=P=-44.999969 Y=-179.999969 R=0.000000
 
 [DetailCategoriesAdvanced]
 BoxComponent.Collision=True
+BoxComponent.Shape=False
 
 
