--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,9 +103,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CameraSpeed=7
 
 [MRU]
-MRUItem0=/Game/Final/Levels/GameLevel
-MRUItem1=/Game/Final/Levels/MainGame
-MRUItem2=/Game/Final/Levels/TestingArea
+MRUItem0=/Game/Final/Levels/TestingArea
+MRUItem1=/Game/Final/Levels/GameLevel
+MRUItem2=/Game/Final/Levels/MainGame
 MRUItem3=/Game/Final/Levels/MainMenu
 MRUItem4=/Game/Final/GameLevel
 MRUItem5=/Game/Final/Levels/2DSideScrollerExampleMap
@@ -114,7 +114,7 @@ MRUItem6=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Final
 ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Tentacles
-ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Menus/backgrounds
+ContentBrowserTab1.SelectedPaths=/Game/Final/Blueprint/Boss
 None=======
 None=======
 ContentBrowserTab1.SourcesExpanded=True
@@ -141,7 +141,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Final/Levels/TestingArea
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 PaperTileMapActor.TransformCommon=True
@@ -1726,7 +1726,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/Final/Levels
+UNR=E:/Github/Project-Final/Finals/Content/Final/Levels
 BRUSH=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBX=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBXAnim=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
