--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -141,7 +141,8 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Final/Levels/TestingArea
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Final/Blueprint/Boss/BP_Following_Boss.BP_Following_Boss
 
 [DetailCategories]
 PaperTileMapActor.TransformCommon=True
@@ -1706,6 +1707,18 @@ REINST_BP_Following_Boss_C_326.Tags=True
 REINST_BP_Following_Boss_C_326.ComponentReplication=True
 REINST_BP_Following_Boss_C_326.Cooking=True
 REINST_BP_Following_Boss_C_326.Events=True
+REINST_BP_Following_Boss_C_72.Variable=True
+REINST_BP_Following_Boss_C_72.TransformCommon=True
+REINST_BP_Following_Boss_C_72.Sockets=True
+REINST_BP_Following_Boss_C_72.Shape=True
+REINST_BP_Following_Boss_C_72.Navigation=True
+REINST_BP_Following_Boss_C_72.Rendering=True
+REINST_BP_Following_Boss_C_72.Physics=True
+REINST_BP_Following_Boss_C_72.Collision=True
+REINST_BP_Following_Boss_C_72.Tags=True
+REINST_BP_Following_Boss_C_72.ComponentReplication=True
+REINST_BP_Following_Boss_C_72.Cooking=True
+REINST_BP_Following_Boss_C_72.Events=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -2398,8 +2411,8 @@ RecentlyPlaced=/Game/Final/Sprites/Trees/islandtree2_Sprite_0.islandtree2_Sprite
 RecentlyPlaced=/Game/Final/Sprites/Platforms/health_container.health_container;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Blueprint/Tentacles/BP_LargeTentacle
-MRUItem1=/Game/Final/Blueprint/Boss/BP_Following_Boss
+MRUItem0=/Game/Final/Blueprint/Boss/BP_Following_Boss
+MRUItem1=/Game/Final/Blueprint/Tentacles/BP_LargeTentacle
 MRUItem2=/Game/Final/Blueprint/Tentacles/BP_SmallTentacle
 MRUItem3=/Game/Final/Flipbook/Assets/FB_SmallTentacle
 MRUItem4=/Game/Final/Blueprint/Tentacles/BP_Tentacle_6
@@ -2495,15 +2508,16 @@ SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray
 ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[8]\" "
 BP_Maincharacter_C=
-PaperCharacter="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-Character="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-Pawn="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PaperCharacter=
+Character=
+Pawn=
 REINST_BP_Maincharacter_C_92="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-BP_Following_Boss_C="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+BP_Following_Boss_C="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 REINST_BP_Following_Boss_C_302="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 REINST_BP_Following_Boss_C_320="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 REINST_BP_Following_Boss_C_326="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+REINST_BP_Following_Boss_C_72="\"Object.Character.Sprite.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.Lens.Lens,
