replaced box sprites, added crystal spikes to caves

--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,8 +104,8 @@ CameraSpeed=7
 
 [MRU]
 MRUItem0=/Game/Final/Levels/GameLevel
-MRUItem1=/Game/Final/Levels/MainGame
-MRUItem2=/Game/Final/Levels/TestingArea
+MRUItem1=/Game/Final/Levels/TestingArea
+MRUItem2=/Game/Final/Levels/MainGame
 MRUItem3=/Game/Final/Levels/MainMenu
 MRUItem4=/Game/Final/GameLevel
 MRUItem5=/Game/Final/Levels/2DSideScrollerExampleMap
@@ -114,7 +114,7 @@ MRUItem6=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Final
 ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Tentacles
-ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Tentacles
+ContentBrowserTab1.SelectedPaths=/Game/Final/Blueprint/Assets
 None=======
 None=======
 ContentBrowserTab1.SourcesExpanded=True
@@ -1640,7 +1640,7 @@ UNR=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/Final/Levels
 BRUSH=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBX=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBXAnim=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
-GenericImport=../../../../../../Finals/Opto/islandtree2.png
+GenericImport=../../../../../../Finals/Opto/crystals 1.PNG
 GenericExport=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 GenericOpen=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 GenericSave=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
@@ -2284,14 +2284,18 @@ DistCurveEditor.TimeStamp=2018.10.01-03.52.45
 DistCurveEditor.LastCompileMethod=Unknown
 MeshBuilder.TimeStamp=2018.10.01-03.52.50
 MeshBuilder.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2018.10.02-23.34.42
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/Final/Blueprint/Assets/BP_Damage_Box.BP_Damage_Box;
+RecentlyPlaced=/Game/Final/Blueprint/Assets/BP_Healing_Box.BP_Healing_Box;
+RecentlyPlaced=/Game/Final/Sprites/Crystals/crystals_1_Sprite_0.crystals_1_Sprite_0;
+RecentlyPlaced=/Game/Final/Sprites/Crystals/crystals2_Sprite_0.crystals2_Sprite_0;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Exploding_Enemies.BP_Exploding_Enemies;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Homing_Enemy.BP_Homing_Enemy;
 RecentlyPlaced=/Game/Final/Blueprint/Assets/BP_RNG_Box.BP_RNG_Box;
 RecentlyPlaced=/Game/Final/Flipbook/Assets/FB_RNG_Box.FB_RNG_Box;
-RecentlyPlaced=/Game/Final/Blueprint/Assets/BP_Healing_Box.BP_Healing_Box;
-RecentlyPlaced=/Game/Final/Blueprint/Assets/BP_Damage_Box.BP_Damage_Box;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss;
 RecentlyPlaced=/Game/Final/Sprites/Fruits/fruit_power.fruit_power;
 RecentlyPlaced=/Game/Final/Sprites/Fruits/fruit_health.fruit_health;
@@ -2304,30 +2308,28 @@ RecentlyPlaced=/Game/Final/Sprites/Trees/isnlandstrees_Sprite_0.isnlandstrees_Sp
 RecentlyPlaced=/Game/Final/Sprites/Trees/islandtree2_Sprite_0.islandtree2_Sprite_0;
 RecentlyPlaced=/Game/Final/Sprites/Platforms/health_container.health_container;
 RecentlyPlaced=/Game/Final/Sprites/Platforms/up_down_platform.up_down_platform;
-RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle_ground2_Sprite_0.tentacle_ground2_Sprite_0;
-RecentlyPlaced=/Game/Final/Sprites/Tentacles/tentacle2_Sprite_0.tentacle2_Sprite_0;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
-MRUItem1=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0
-MRUItem2=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0
-MRUItem3=/Game/Final/Sprites/Tentacles/tentacle_ground1
-MRUItem4=/Game/Final/Sprites/Trees/islandtree2_Sprite_0
-MRUItem5=/Game/Final/Sprites/Trees/islandtrees3_Sprite_0
-MRUItem6=/Game/Final/Levels/GameLevel
-MRUItem7=/Game/Final/Levels/MainGame
-MRUItem8=/Game/Final/Blueprint/BP_Homing_Enemy
-MRUItem9=/Game/Final/Blueprint/BP_Maincharacter
-MRUItem10=/Game/Final/Blueprint/BP_Exploding_Enemies
-MRUItem11=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem12=/Game/Final/Levels/TestingArea
-MRUItem13=/Game/Final/Levels/MainMenu
-MRUItem14=/Game/Final/Widget/W_PauseMenu
-MRUItem15=/Game/Final/Widget/W_MainMenu
-MRUItem16=/Game/Final/Blueprint/Assets/BP_Healing_Box
-MRUItem17=/Game/Final/Blueprint/Assets/BP_Damage_Box
-MRUItem18=/Game/Final/Widget/W_Player_Health
-MRUItem19=/Game/Final/Blueprint/Assets/BP_RNG_Box
+MRUItem0=/Game/Final/Levels/GameLevel
+MRUItem1=/Game/Final/Levels/TestingArea
+MRUItem2=/Game/Final/Sprites/Crystals/crystals_1_Sprite_0
+MRUItem3=/Game/Final/Sprites/Crystals/crystals2_Sprite_0
+MRUItem4=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
+MRUItem5=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0
+MRUItem6=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0
+MRUItem7=/Game/Final/Sprites/Tentacles/tentacle_ground1
+MRUItem8=/Game/Final/Sprites/Trees/islandtree2_Sprite_0
+MRUItem9=/Game/Final/Sprites/Trees/islandtrees3_Sprite_0
+MRUItem10=/Game/Final/Levels/MainGame
+MRUItem11=/Game/Final/Blueprint/BP_Homing_Enemy
+MRUItem12=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem13=/Game/Final/Blueprint/BP_Exploding_Enemies
+MRUItem14=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem15=/Game/Final/Levels/MainMenu
+MRUItem16=/Game/Final/Widget/W_PauseMenu
+MRUItem17=/Game/Final/Widget/W_MainMenu
+MRUItem18=/Game/Final/Blueprint/Assets/BP_Healing_Box
+MRUItem19=/Game/Final/Blueprint/Assets/BP_Damage_Box
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
@@ -2381,10 +2383,12 @@ MRUItem19=/Game/Final/Blueprint/Assets/BP_RNG_Box
 /Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0.tentacle_ground1_Sprite_0=1
 /Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0.tentaclearchlarge_Sprite_0=1
 /Game/Final/Sprites/Tentacles/tentacle1_Sprite_0.tentacle1_Sprite_0=1
+/Game/Final/Sprites/Crystals/crystals2_Sprite_0.crystals2_Sprite_0=1
+/Game/Final/Sprites/Crystals/crystals_1_Sprite_0.crystals_1_Sprite_0=1
 
 [DetailPropertyExpansion]
-PaperSprite="\"Object.Collision.CollisionGeometry\" "
-Object="\"Object.Collision.CollisionGeometry\" "
+PaperSprite="\"Object.Collision.CollisionGeometry\" \"Object.Collision.CollisionGeometry.Shapes.Shapes[0].Vertices.Vertices[23]\" "
+Object=
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
